fixed few spacing

--- a/css/media.css
+++ b/css/media.css
@@ -10,6 +10,7 @@
 	  display: grid;
 	  grid-template: 1fr / 1fr;
 	  margin-left: 0px;
+		grid-row-gap: 30px;
 	}
 
 	.about
@@ -81,7 +82,7 @@
 	{
 	  color: #DFCFBE;
 	  display: grid;
-	  grid-template: 2fr 1fr 1fr 1fr / repeat(1, 1fr);
+	  grid-template: 1fr / repeat(1, 1fr);
 	}
 	.education_header
 	{
@@ -125,12 +126,11 @@
 	{
 	  font-size: 20px;
 	  font-weight: 600;
-	  text-align: center;
 	}
 
 	.technical_skills, .other_skills
 	{
-	  padding-left: 15px;
+	  padding-left: 10px;
 	}
 
 	.technical_skills, .other_skills
@@ -138,10 +138,6 @@
 	  font-size: 20px;
 	}
 
-	.technical_skills:hover, .other_skills:hover
-	{
-	  box-shadow: 5px 5px 10px;
-	}
 }
 
 
@@ -151,15 +147,14 @@
 	{
 	  color: #DFCFBE;
 	  display: grid;
-	  grid-template: 1fr / 1fr;
+	  grid-template: 60px 50px 50px 10px / 1fr;
+		grid-row-gap: 10px;
 	}
 
 	.certifications_header
 	{
-	  margin-top: 50px;
 	  text-align: center;
 	  grid-column: 1 / -1;
-	  margin-bottom: 50px;
 	  font-size: 30px;
 	  font-weight: 600;
 	}
@@ -178,8 +173,9 @@
 	.projects
 	{
 	  display: grid;
-	  grid-template: repeat(auto-fill, minmax(220px, 1fr)) / repeat(auto-fill, minmax(200px, 1fr));
+	  grid-template: repeat(auto-fill, minmax(220px, 1fr)) / repeat(auto-fill, minmax(250px, 1fr));
 	  grid-gap: 30px;
+		grid-row-gap: 20px;
 	}
 
 	.projects_header
