--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ ul
   display: grid;
   grid-template: 1fr / 1fr;
   margin-left: 210px;
+  grid-row-gap: 40px;
 }
 
 .side-menu, .about, .education, .skills, .certifications, .projects, .contact
@@ -186,7 +187,7 @@ ul
 {
   color: #DFCFBE;
   display: grid;
-  grid-template: 70px 50px 50px 50px / repeat(2, 1fr);
+  grid-template: 150px 80px 80px 80px/ repeat(2, 1fr);
 }
 
 .education_header
@@ -202,6 +203,7 @@ ul
 {
   font-size: 30px;
   grid-column: 1 / -1;
+  margin-left: 10px;
 
 }
 /*----------------------------------------------------------------------------*/
@@ -214,7 +216,7 @@ ul
 {
   display: grid;
   color: #282D3C;
-  grid-template: 1fr 2fr 0.1fr / repeat(2, 1fr);
+  grid-template: 1fr /  1fr;
   grid-column-gap: 30px;
 }
 
@@ -230,22 +232,14 @@ ul
 {
   font-size: 40px;
   font-weight: 600;
-  text-align: center;
-}
-
-.technical_skills, .other_skills
-{
 }
 
 .technical_skills, .other_skills
 {
   font-size: 25px;
+  margin-left: 10px;
 }
 
-.technical_skills:hover, .other_skills:hover
-{
-  box-shadow: 5px 5px 10px;
-}
 /*----------------------------------------------------------------------------*/
 /*----------------------------------------------------------------------------*/
 /*----------------------------------------------------------------------------*/
@@ -254,7 +248,7 @@ ul
 {
   color: #DFCFBE;
   display: grid;
-  grid-template: 2fr 1.2fr 1.2fr / 1fr;
+  grid-template: 2fr 1.2fr 1.2fr 1fr / 1fr;
 }
 
 .certifications_header
@@ -270,6 +264,7 @@ ul
 {
   grid-column: 1 / -1;
   font-size: 30px;
+  margin-left: 10px;
 }
 /*----------------------------------------------------------------------------*/
 /*----------------------------------------------------------------------------*/
@@ -280,7 +275,7 @@ ul
 .projects
 {
   display: grid;
-  grid-template: repeat(auto-fill, minmax(280px, 1fr)) / repeat(auto-fill, minmax(200px, 1fr));
+  grid-template: 150px 290px/ repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 30px;
 }
 
@@ -297,6 +292,7 @@ ul
 {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
+  margin-left: 10px;
 }
 
 .card:hover
